# oxygen

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: auth.rs  counter.rs  mod.rs  routes.rs  sync.rs
src-tauri/src/db/: mod.rs  mongo.rs  polo.rs  sled.rs  sqlite.rs
src-tauri/src/db/init/: mod.rs  sqlite.rs
src-tauri/src/enums/: error.rs
src-tauri/src/models/: error.rs  mod.rs  report.rs  route.rs  stop.rs  ticket.rs  time.rs  timetable.rs  user.rs
src-tauri/src/repository/: counter.rs  mod.rs
src-tauri/src/repository/local/: mod.rs  report.rs  route.rs  ticket.rs  user.rs
src-tauri/src/repository/remote/: route.rs  user.rs
src-tauri/src/services/: auth.rs  connectivity.rs  mod.rs
src-tauri/src/services/local/: routes.rs
src-tauri/src/services/print/: printer.rs
src-tauri/src/services/sync/: mod.rs  routes.rs  users.rs
src/components/: HomeCard.tsx  HomeDrawer.tsx  ThemeSwitch.tsx
src/models/: CounterMap.ts  ErrorResponse.ts  Route.ts  Stop.ts  Time.ts  User.ts  models.ts
src/pages/: HomeLayout.tsx  Login.tsx  Reports.tsx  Ticket.tsx
src/states/: AuthState.ts  RoutesState.ts  TicketState.ts
src/store/: AuthStore.ts  TicketStore.ts
src/stores/: RoutesStore.ts
src/themes/: ThemeProvider.tsx  Themes.tsx
