[package]
name = "oxygen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oxygen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.32.1"
chrono = { version = "0.4.38", features = ["serde"] }
sled = "0.34.7"
bcrypt = "0.16.0"
mongodb = "3.1.0"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
polodb_core = "5.1.3"
anyhow = "1.0.93"
uuid = { version = "1.11.0", features = ["v4"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
reqwest = "0.12.9"
ping-rs = "0.1.2"

